Implement Ine's df and new delayed noise Models

--- a/MDA_spline_delayednoise.ipynb
+++ b/MDA_spline_delayednoise.ipynb
@@ -51,13 +51,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Arthur\\AppData\\Local\\Temp\\ipykernel_9316\\3924323217.py:6: SettingWithCopyWarning: \n",
+      "C:\\Users\\Arthur\\AppData\\Local\\Temp\\ipykernel_11752\\3924323217.py:6: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df_noisedelay['result_timestamp'] = df_noisedelay['result_timestamp']+pd.DateOffset(days=1)\n",
-      "C:\\Users\\Arthur\\AppData\\Local\\Temp\\ipykernel_9316\\3924323217.py:7: SettingWithCopyWarning: \n",
+      "C:\\Users\\Arthur\\AppData\\Local\\Temp\\ipykernel_11752\\3924323217.py:7: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -813,7 +813,7 @@
    "outputs": [],
    "source": [
     "y = df_fil_nd[\"laeq\"]\n",
-    "X = df_fil_nd.drop([\"laeq\",\"laeq_delayed\"], axis=\"columns\")"
+    "X = df_fil_nd.drop([\"laeq\"], axis=\"columns\")"
    ]
   },
   {
@@ -873,6 +873,7 @@
        "      <th>LC_WINDSPEED</th>\n",
        "      <th>LC_RAD60</th>\n",
        "      <th>LC_TEMP_QCL0</th>\n",
+       "      <th>laeq_delayed</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -894,6 +895,7 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>20.28</td>\n",
+       "      <td>55.689667</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>32926</th>\n",
@@ -913,6 +915,7 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>20.22</td>\n",
+       "      <td>54.955167</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>32927</th>\n",
@@ -932,6 +935,7 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>20.22</td>\n",
+       "      <td>54.877333</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>32928</th>\n",
@@ -951,6 +955,7 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>20.22</td>\n",
+       "      <td>52.224833</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>32929</th>\n",
@@ -970,9 +975,11 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>20.26</td>\n",
+       "      <td>52.786333</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
+       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -1008,6 +1015,7 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>16.72</td>\n",
+       "      <td>45.274667</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>42924</th>\n",
@@ -1027,6 +1035,7 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>16.76</td>\n",
+       "      <td>44.042167</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>42925</th>\n",
@@ -1046,6 +1055,7 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>16.72</td>\n",
+       "      <td>44.302667</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>42926</th>\n",
@@ -1065,6 +1075,7 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>16.68</td>\n",
+       "      <td>49.052833</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>42927</th>\n",
@@ -1084,10 +1095,11 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>16.47</td>\n",
+       "      <td>46.903500</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>10000 rows × 16 columns</p>\n",
+       "<p>10000 rows × 17 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -1117,20 +1129,20 @@
        "42926       13.60  37.0     0.0        0.0         0.000         0.0   \n",
        "42927       13.70  38.0     0.0        0.0         0.000         0.0   \n",
        "\n",
-       "       LC_WINDSPEED  LC_RAD60  LC_TEMP_QCL0  \n",
-       "32925           0.0       0.0         20.28  \n",
-       "32926           0.0       0.0         20.22  \n",
-       "32927           0.0       0.0         20.22  \n",
-       "32928           0.0       0.0         20.22  \n",
-       "32929           0.0       0.0         20.26  \n",
-       "...             ...       ...           ...  \n",
-       "42923           0.0       0.0         16.72  \n",
-       "42924           0.0       0.0         16.76  \n",
-       "42925           0.0       0.0         16.72  \n",
-       "42926           0.0       0.0         16.68  \n",
-       "42927           0.0       0.0         16.47  \n",
+       "       LC_WINDSPEED  LC_RAD60  LC_TEMP_QCL0  laeq_delayed  \n",
+       "32925           0.0       0.0         20.28     55.689667  \n",
+       "32926           0.0       0.0         20.22     54.955167  \n",
+       "32927           0.0       0.0         20.22     54.877333  \n",
+       "32928           0.0       0.0         20.22     52.224833  \n",
+       "32929           0.0       0.0         20.26     52.786333  \n",
+       "...             ...       ...           ...           ...  \n",
+       "42923           0.0       0.0         16.72     45.274667  \n",
+       "42924           0.0       0.0         16.76     44.042167  \n",
+       "42925           0.0       0.0         16.72     44.302667  \n",
+       "42926           0.0       0.0         16.68     49.052833  \n",
+       "42927           0.0       0.0         16.47     46.903500  \n",
        "\n",
-       "[10000 rows x 16 columns]"
+       "[10000 rows x 17 columns]"
       ]
      },
      "execution_count": 6,
@@ -1188,6 +1200,7 @@
        "      <th>LC_WINDSPEED</th>\n",
        "      <th>LC_RAD60</th>\n",
        "      <th>LC_TEMP_QCL0</th>\n",
+       "      <th>laeq_delayed</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1209,6 +1222,7 @@
        "      <td>0.19</td>\n",
        "      <td>132.0</td>\n",
        "      <td>13.15</td>\n",
+       "      <td>53.658598</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>36926</th>\n",
@@ -1228,6 +1242,7 @@
        "      <td>0.03</td>\n",
        "      <td>86.0</td>\n",
        "      <td>13.25</td>\n",
+       "      <td>56.728000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>36927</th>\n",
@@ -1247,6 +1262,7 @@
        "      <td>0.06</td>\n",
        "      <td>97.0</td>\n",
        "      <td>13.18</td>\n",
+       "      <td>55.830333</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>36928</th>\n",
@@ -1266,6 +1282,7 @@
        "      <td>0.21</td>\n",
        "      <td>101.0</td>\n",
        "      <td>13.10</td>\n",
+       "      <td>55.531500</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>36929</th>\n",
@@ -1285,9 +1302,11 @@
        "      <td>0.28</td>\n",
        "      <td>91.0</td>\n",
        "      <td>13.15</td>\n",
+       "      <td>55.132500</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
+       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -1323,6 +1342,7 @@
        "      <td>0.11</td>\n",
        "      <td>0.0</td>\n",
        "      <td>11.55</td>\n",
+       "      <td>55.455500</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>46924</th>\n",
@@ -1342,6 +1362,7 @@
        "      <td>0.25</td>\n",
        "      <td>0.0</td>\n",
        "      <td>11.61</td>\n",
+       "      <td>53.652167</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>46925</th>\n",
@@ -1361,6 +1382,7 @@
        "      <td>0.06</td>\n",
        "      <td>0.0</td>\n",
        "      <td>11.58</td>\n",
+       "      <td>50.546833</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>46926</th>\n",
@@ -1380,6 +1402,7 @@
        "      <td>0.02</td>\n",
        "      <td>0.0</td>\n",
        "      <td>11.48</td>\n",
+       "      <td>53.404167</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>46927</th>\n",
@@ -1399,10 +1422,11 @@
        "      <td>0.04</td>\n",
        "      <td>0.0</td>\n",
        "      <td>11.36</td>\n",
+       "      <td>50.421667</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>10000 rows × 16 columns</p>\n",
+       "<p>10000 rows × 17 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -1432,20 +1456,20 @@
        "46926        8.87  37.0     0.0        0.0         0.000      -129.0   \n",
        "46927        8.86  38.0     0.0        0.0         0.000       -83.0   \n",
        "\n",
-       "       LC_WINDSPEED  LC_RAD60  LC_TEMP_QCL0  \n",
-       "36925          0.19     132.0         13.15  \n",
-       "36926          0.03      86.0         13.25  \n",
-       "36927          0.06      97.0         13.18  \n",
-       "36928          0.21     101.0         13.10  \n",
-       "36929          0.28      91.0         13.15  \n",
-       "...             ...       ...           ...  \n",
-       "46923          0.11       0.0         11.55  \n",
-       "46924          0.25       0.0         11.61  \n",
-       "46925          0.06       0.0         11.58  \n",
-       "46926          0.02       0.0         11.48  \n",
-       "46927          0.04       0.0         11.36  \n",
+       "       LC_WINDSPEED  LC_RAD60  LC_TEMP_QCL0  laeq_delayed  \n",
+       "36925          0.19     132.0         13.15     53.658598  \n",
+       "36926          0.03      86.0         13.25     56.728000  \n",
+       "36927          0.06      97.0         13.18     55.830333  \n",
+       "36928          0.21     101.0         13.10     55.531500  \n",
+       "36929          0.28      91.0         13.15     55.132500  \n",
+       "...             ...       ...           ...           ...  \n",
+       "46923          0.11       0.0         11.55     55.455500  \n",
+       "46924          0.25       0.0         11.61     53.652167  \n",
+       "46925          0.06       0.0         11.58     50.546833  \n",
+       "46926          0.02       0.0         11.48     53.404167  \n",
+       "46927          0.04       0.0         11.36     50.421667  \n",
        "\n",
-       "[10000 rows x 16 columns]"
+       "[10000 rows x 17 columns]"
       ]
      },
      "execution_count": 7,
@@ -1483,7 +1507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1523,6 +1547,7 @@
        "      <th>LC_WINDSPEED</th>\n",
        "      <th>LC_RAD60</th>\n",
        "      <th>LC_TEMP_QCL0</th>\n",
+       "      <th>laeq_delayed</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1544,6 +1569,7 @@
        "      <td>0.10</td>\n",
        "      <td>0.0</td>\n",
        "      <td>12.28</td>\n",
+       "      <td>54.790667</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -1563,6 +1589,7 @@
        "      <td>0.09</td>\n",
        "      <td>0.0</td>\n",
        "      <td>12.33</td>\n",
+       "      <td>48.605833</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -1582,6 +1609,7 @@
        "      <td>0.05</td>\n",
        "      <td>0.0</td>\n",
        "      <td>12.39</td>\n",
+       "      <td>54.277833</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -1601,6 +1629,7 @@
        "      <td>0.17</td>\n",
        "      <td>0.0</td>\n",
        "      <td>12.42</td>\n",
+       "      <td>50.025333</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -1620,9 +1649,11 @@
        "      <td>0.03</td>\n",
        "      <td>0.0</td>\n",
        "      <td>12.51</td>\n",
+       "      <td>48.907333</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
+       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -1658,6 +1689,7 @@
        "      <td>0.40</td>\n",
        "      <td>0.0</td>\n",
        "      <td>16.61</td>\n",
+       "      <td>50.290833</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>52244</th>\n",
@@ -1677,6 +1709,7 @@
        "      <td>0.29</td>\n",
        "      <td>0.0</td>\n",
        "      <td>16.61</td>\n",
+       "      <td>49.906667</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>52245</th>\n",
@@ -1696,6 +1729,7 @@
        "      <td>0.15</td>\n",
        "      <td>0.0</td>\n",
        "      <td>16.51</td>\n",
+       "      <td>49.204667</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>52246</th>\n",
@@ -1715,6 +1749,7 @@
        "      <td>0.29</td>\n",
        "      <td>0.0</td>\n",
        "      <td>16.49</td>\n",
+       "      <td>49.829333</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>52247</th>\n",
@@ -1734,10 +1769,11 @@
        "      <td>0.31</td>\n",
        "      <td>0.0</td>\n",
        "      <td>16.39</td>\n",
+       "      <td>50.667167</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>52242 rows × 16 columns</p>\n",
+       "<p>52242 rows × 17 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -1767,23 +1803,23 @@
        "52246        6.60  38.0     0.0        0.0           0.0       -31.0   \n",
        "52247        6.51  37.0     0.0        0.0           0.0        13.0   \n",
        "\n",
-       "       LC_WINDSPEED  LC_RAD60  LC_TEMP_QCL0  \n",
-       "0              0.10       0.0         12.28  \n",
-       "1              0.09       0.0         12.33  \n",
-       "2              0.05       0.0         12.39  \n",
-       "3              0.17       0.0         12.42  \n",
-       "4              0.03       0.0         12.51  \n",
-       "...             ...       ...           ...  \n",
-       "52243          0.40       0.0         16.61  \n",
-       "52244          0.29       0.0         16.61  \n",
-       "52245          0.15       0.0         16.51  \n",
-       "52246          0.29       0.0         16.49  \n",
-       "52247          0.31       0.0         16.39  \n",
+       "       LC_WINDSPEED  LC_RAD60  LC_TEMP_QCL0  laeq_delayed  \n",
+       "0              0.10       0.0         12.28     54.790667  \n",
+       "1              0.09       0.0         12.33     48.605833  \n",
+       "2              0.05       0.0         12.39     54.277833  \n",
+       "3              0.17       0.0         12.42     50.025333  \n",
+       "4              0.03       0.0         12.51     48.907333  \n",
+       "...             ...       ...           ...           ...  \n",
+       "52243          0.40       0.0         16.61     50.290833  \n",
+       "52244          0.29       0.0         16.61     49.906667  \n",
+       "52245          0.15       0.0         16.51     49.204667  \n",
+       "52246          0.29       0.0         16.49     49.829333  \n",
+       "52247          0.31       0.0         16.39     50.667167  \n",
        "\n",
-       "[52242 rows x 16 columns]"
+       "[52242 rows x 17 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1794,22 +1830,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean Absolute Error:     4.015 +/- 0.212\n",
-      "Root Mean Squared Error: 4.971 +/- 0.242\n"
+      "Mean Absolute Error:     2.887 +/- 0.182\n",
+      "Root Mean Squared Error: 3.732 +/- 0.250\n"
      ]
     }
    ],
    "source": [
     "min_max_scaler=MinMaxScaler()\n",
     "numerical_columns=['hour','weekday','month','weekend','holiday','exam_period','LC_HUMIDITY','LC_DWPTEMP','LC_n','LC_RAD','LC_RAININ',\n",
-    "                   'LC_DAILYRAIN','LC_WINDDIR','LC_WINDSPEED','LC_RAD60','LC_TEMP_QCL0']\n",
+    "                   'LC_DAILYRAIN','LC_WINDDIR','LC_WINDSPEED','LC_RAD60','LC_TEMP_QCL0','laeq_delayed']\n",
     "alphas = np.logspace(-6, 6, 25)\n",
     "naive_linear_pipeline = make_pipeline(\n",
     "    ColumnTransformer(\n",
@@ -1824,15 +1860,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean Absolute Error:     3.134 +/- 0.610\n",
-      "Root Mean Squared Error: 3.928 +/- 0.621\n"
+      "Mean Absolute Error:     2.977 +/- 0.590\n",
+      "Root Mean Squared Error: 3.728 +/- 0.589\n"
      ]
     }
    ],
@@ -1865,7 +1901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1882,15 +1918,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean Absolute Error:     2.972 +/- 0.789\n",
-      "Root Mean Squared Error: 3.648 +/- 0.777\n"
+      "Mean Absolute Error:     2.848 +/- 0.727\n",
+      "Root Mean Squared Error: 3.500 +/- 0.713\n"
      ]
     }
    ],
@@ -1910,15 +1946,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean Absolute Error:     3.171 +/- 0.689\n",
-      "Root Mean Squared Error: 3.932 +/- 0.755\n"
+      "Mean Absolute Error:     3.183 +/- 0.823\n",
+      "Root Mean Squared Error: 3.918 +/- 0.873\n"
      ]
     }
    ],
