6 hours delay, 3 locations

--- a/MDA_GBRT_delayednoise.ipynb
+++ b/MDA_GBRT_delayednoise.ipynb
@@ -423,8 +423,7 @@
     "df['255439'] = df['object_id']==255439\n",
     "df['255440'] = df['object_id']==255440\n",
     "df['255441'] = df['object_id']==255441\n",
-    "df = df.sort_values(by=['result_timestamp','object_id'])\n",
-    "df"
+    "df = df.sort_values(by=['result_timestamp','object_id'])"
    ]
   },
   {
