Comparison with nighttime only model

--- a/MDA_XGB_delayednoise.ipynb
+++ b/MDA_XGB_delayednoise.ipynb
@@ -2328,6 +2328,542 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>object_id</th>\n",
+       "      <th>result_timestamp</th>\n",
+       "      <th>laeq</th>\n",
+       "      <th>date</th>\n",
+       "      <th>time</th>\n",
+       "      <th>hour</th>\n",
+       "      <th>weekday</th>\n",
+       "      <th>month</th>\n",
+       "      <th>weekend</th>\n",
+       "      <th>day_time</th>\n",
+       "      <th>...</th>\n",
+       "      <th>LC_HUMIDITY</th>\n",
+       "      <th>LC_DWPTEMP</th>\n",
+       "      <th>LC_n</th>\n",
+       "      <th>LC_RAD</th>\n",
+       "      <th>LC_RAININ</th>\n",
+       "      <th>LC_DAILYRAIN</th>\n",
+       "      <th>LC_WINDDIR</th>\n",
+       "      <th>LC_WINDSPEED</th>\n",
+       "      <th>LC_RAD60</th>\n",
+       "      <th>LC_TEMP_QCL0</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>255441</td>\n",
+       "      <td>2022-01-01 06:00:00</td>\n",
+       "      <td>46.043333</td>\n",
+       "      <td>2022-01-01</td>\n",
+       "      <td>06:00:00</td>\n",
+       "      <td>6</td>\n",
+       "      <td>Saturday</td>\n",
+       "      <td>1</td>\n",
+       "      <td>True</td>\n",
+       "      <td>Saturday 06:00:00</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>255441</td>\n",
+       "      <td>2022-01-01 06:10:00</td>\n",
+       "      <td>45.743000</td>\n",
+       "      <td>2022-01-01</td>\n",
+       "      <td>06:10:00</td>\n",
+       "      <td>6</td>\n",
+       "      <td>Saturday</td>\n",
+       "      <td>1</td>\n",
+       "      <td>True</td>\n",
+       "      <td>Saturday 06:10:00</td>\n",
+       "      <td>...</td>\n",
+       "      <td>91.0</td>\n",
+       "      <td>11.88</td>\n",
+       "      <td>38.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>-48.0</td>\n",
+       "      <td>0.04</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>13.28</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>255441</td>\n",
+       "      <td>2022-01-01 06:20:00</td>\n",
+       "      <td>48.452167</td>\n",
+       "      <td>2022-01-01</td>\n",
+       "      <td>06:20:00</td>\n",
+       "      <td>6</td>\n",
+       "      <td>Saturday</td>\n",
+       "      <td>1</td>\n",
+       "      <td>True</td>\n",
+       "      <td>Saturday 06:20:00</td>\n",
+       "      <td>...</td>\n",
+       "      <td>90.0</td>\n",
+       "      <td>11.72</td>\n",
+       "      <td>37.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>45.0</td>\n",
+       "      <td>0.02</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>13.28</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>255441</td>\n",
+       "      <td>2022-01-01 06:30:00</td>\n",
+       "      <td>45.736167</td>\n",
+       "      <td>2022-01-01</td>\n",
+       "      <td>06:30:00</td>\n",
+       "      <td>6</td>\n",
+       "      <td>Saturday</td>\n",
+       "      <td>1</td>\n",
+       "      <td>True</td>\n",
+       "      <td>Saturday 06:30:00</td>\n",
+       "      <td>...</td>\n",
+       "      <td>90.0</td>\n",
+       "      <td>11.72</td>\n",
+       "      <td>38.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>-52.0</td>\n",
+       "      <td>0.04</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>13.28</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>255441</td>\n",
+       "      <td>2022-01-01 06:40:00</td>\n",
+       "      <td>44.955333</td>\n",
+       "      <td>2022-01-01</td>\n",
+       "      <td>06:40:00</td>\n",
+       "      <td>6</td>\n",
+       "      <td>Saturday</td>\n",
+       "      <td>1</td>\n",
+       "      <td>True</td>\n",
+       "      <td>Saturday 06:40:00</td>\n",
+       "      <td>...</td>\n",
+       "      <td>90.0</td>\n",
+       "      <td>11.72</td>\n",
+       "      <td>37.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>34.0</td>\n",
+       "      <td>0.02</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>13.28</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>131013</th>\n",
+       "      <td>255441</td>\n",
+       "      <td>2022-12-31 23:10:00</td>\n",
+       "      <td>53.712833</td>\n",
+       "      <td>2022-12-31</td>\n",
+       "      <td>23:10:00</td>\n",
+       "      <td>23</td>\n",
+       "      <td>Saturday</td>\n",
+       "      <td>12</td>\n",
+       "      <td>True</td>\n",
+       "      <td>Saturday 23:10:00</td>\n",
+       "      <td>...</td>\n",
+       "      <td>65.0</td>\n",
+       "      <td>9.48</td>\n",
+       "      <td>38.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.001</td>\n",
+       "      <td>-28.0</td>\n",
+       "      <td>0.17</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>15.95</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>131014</th>\n",
+       "      <td>255441</td>\n",
+       "      <td>2022-12-31 23:20:00</td>\n",
+       "      <td>55.333167</td>\n",
+       "      <td>2022-12-31</td>\n",
+       "      <td>23:20:00</td>\n",
+       "      <td>23</td>\n",
+       "      <td>Saturday</td>\n",
+       "      <td>12</td>\n",
+       "      <td>True</td>\n",
+       "      <td>Saturday 23:20:00</td>\n",
+       "      <td>...</td>\n",
+       "      <td>66.0</td>\n",
+       "      <td>9.50</td>\n",
+       "      <td>37.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.001</td>\n",
+       "      <td>38.0</td>\n",
+       "      <td>0.31</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>15.89</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>131015</th>\n",
+       "      <td>255441</td>\n",
+       "      <td>2022-12-31 23:30:00</td>\n",
+       "      <td>56.797333</td>\n",
+       "      <td>2022-12-31</td>\n",
+       "      <td>23:30:00</td>\n",
+       "      <td>23</td>\n",
+       "      <td>Saturday</td>\n",
+       "      <td>12</td>\n",
+       "      <td>True</td>\n",
+       "      <td>Saturday 23:30:00</td>\n",
+       "      <td>...</td>\n",
+       "      <td>66.0</td>\n",
+       "      <td>9.43</td>\n",
+       "      <td>38.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.001</td>\n",
+       "      <td>46.0</td>\n",
+       "      <td>0.26</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>15.79</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>131016</th>\n",
+       "      <td>255441</td>\n",
+       "      <td>2022-12-31 23:40:00</td>\n",
+       "      <td>61.010667</td>\n",
+       "      <td>2022-12-31</td>\n",
+       "      <td>23:40:00</td>\n",
+       "      <td>23</td>\n",
+       "      <td>Saturday</td>\n",
+       "      <td>12</td>\n",
+       "      <td>True</td>\n",
+       "      <td>Saturday 23:40:00</td>\n",
+       "      <td>...</td>\n",
+       "      <td>65.0</td>\n",
+       "      <td>9.19</td>\n",
+       "      <td>37.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.001</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>0.39</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>15.78</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>131017</th>\n",
+       "      <td>255441</td>\n",
+       "      <td>2022-12-31 23:50:00</td>\n",
+       "      <td>58.354424</td>\n",
+       "      <td>2022-12-31</td>\n",
+       "      <td>23:50:00</td>\n",
+       "      <td>23</td>\n",
+       "      <td>Saturday</td>\n",
+       "      <td>12</td>\n",
+       "      <td>True</td>\n",
+       "      <td>Saturday 23:50:00</td>\n",
+       "      <td>...</td>\n",
+       "      <td>64.0</td>\n",
+       "      <td>8.95</td>\n",
+       "      <td>38.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.001</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>0.43</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>15.78</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>131018 rows × 31 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        object_id    result_timestamp       laeq        date      time  hour   \n",
+       "0          255441 2022-01-01 06:00:00  46.043333  2022-01-01  06:00:00     6  \\\n",
+       "1          255441 2022-01-01 06:10:00  45.743000  2022-01-01  06:10:00     6   \n",
+       "2          255441 2022-01-01 06:20:00  48.452167  2022-01-01  06:20:00     6   \n",
+       "3          255441 2022-01-01 06:30:00  45.736167  2022-01-01  06:30:00     6   \n",
+       "4          255441 2022-01-01 06:40:00  44.955333  2022-01-01  06:40:00     6   \n",
+       "...           ...                 ...        ...         ...       ...   ...   \n",
+       "131013     255441 2022-12-31 23:10:00  53.712833  2022-12-31  23:10:00    23   \n",
+       "131014     255441 2022-12-31 23:20:00  55.333167  2022-12-31  23:20:00    23   \n",
+       "131015     255441 2022-12-31 23:30:00  56.797333  2022-12-31  23:30:00    23   \n",
+       "131016     255441 2022-12-31 23:40:00  61.010667  2022-12-31  23:40:00    23   \n",
+       "131017     255441 2022-12-31 23:50:00  58.354424  2022-12-31  23:50:00    23   \n",
+       "\n",
+       "         weekday  month  weekend           day_time  ... LC_HUMIDITY   \n",
+       "0       Saturday      1     True  Saturday 06:00:00  ...         NaN  \\\n",
+       "1       Saturday      1     True  Saturday 06:10:00  ...        91.0   \n",
+       "2       Saturday      1     True  Saturday 06:20:00  ...        90.0   \n",
+       "3       Saturday      1     True  Saturday 06:30:00  ...        90.0   \n",
+       "4       Saturday      1     True  Saturday 06:40:00  ...        90.0   \n",
+       "...          ...    ...      ...                ...  ...         ...   \n",
+       "131013  Saturday     12     True  Saturday 23:10:00  ...        65.0   \n",
+       "131014  Saturday     12     True  Saturday 23:20:00  ...        66.0   \n",
+       "131015  Saturday     12     True  Saturday 23:30:00  ...        66.0   \n",
+       "131016  Saturday     12     True  Saturday 23:40:00  ...        65.0   \n",
+       "131017  Saturday     12     True  Saturday 23:50:00  ...        64.0   \n",
+       "\n",
+       "        LC_DWPTEMP  LC_n  LC_RAD  LC_RAININ  LC_DAILYRAIN  LC_WINDDIR   \n",
+       "0              NaN   NaN     NaN        NaN           NaN         NaN  \\\n",
+       "1            11.88  38.0     0.0        0.0         0.000       -48.0   \n",
+       "2            11.72  37.0     0.0        0.0         0.000        45.0   \n",
+       "3            11.72  38.0     0.0        0.0         0.000       -52.0   \n",
+       "4            11.72  37.0     0.0        0.0         0.000        34.0   \n",
+       "...            ...   ...     ...        ...           ...         ...   \n",
+       "131013        9.48  38.0     0.0        0.0         0.001       -28.0   \n",
+       "131014        9.50  37.0     0.0        0.0         0.001        38.0   \n",
+       "131015        9.43  38.0     0.0        0.0         0.001        46.0   \n",
+       "131016        9.19  37.0     0.0        0.0         0.001        10.0   \n",
+       "131017        8.95  38.0     0.0        0.0         0.001        30.0   \n",
+       "\n",
+       "        LC_WINDSPEED  LC_RAD60 LC_TEMP_QCL0  \n",
+       "0                NaN       NaN          NaN  \n",
+       "1               0.04       0.0        13.28  \n",
+       "2               0.02       0.0        13.28  \n",
+       "3               0.04       0.0        13.28  \n",
+       "4               0.02       0.0        13.28  \n",
+       "...              ...       ...          ...  \n",
+       "131013          0.17       0.0        15.95  \n",
+       "131014          0.31       0.0        15.89  \n",
+       "131015          0.26       0.0        15.79  \n",
+       "131016          0.39       0.0        15.78  \n",
+       "131017          0.43       0.0        15.78  \n",
+       "\n",
+       "[131018 rows x 31 columns]"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#predict nighttime values only\n",
+    "df_night = df.set_index('result_timestamp')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_night = df_night.between_time(start_time='22:00:00', end_time='6:00:00', inclusive='left')\n",
+    "df_night = df_night.reset_index()\n",
+    "df_nd_n = df_night.drop(['key','object_id','result_timestamp','date','time','day_time','day_hour','LC_TEMP_QCL1','LC_TEMP_QCL2','LC_TEMP_QCL3'], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "laeq            0\n",
+       "hour            0\n",
+       "weekday         0\n",
+       "month           0\n",
+       "weekend         0\n",
+       "holiday         0\n",
+       "exam_period     0\n",
+       "255439          0\n",
+       "255440          0\n",
+       "255441          0\n",
+       "laeq_delayed    0\n",
+       "LC_HUMIDITY     0\n",
+       "LC_DWPTEMP      0\n",
+       "LC_n            0\n",
+       "LC_RAD          0\n",
+       "LC_RAININ       0\n",
+       "LC_DAILYRAIN    0\n",
+       "LC_WINDDIR      0\n",
+       "LC_WINDSPEED    0\n",
+       "LC_RAD60        0\n",
+       "LC_TEMP_QCL0    0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_nd_n = df_nd_n[df_nd_n.isna()['LC_HUMIDITY']==False]\n",
+    "df_nd_n.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_nd_n['weekday'] = df_nd_n['weekday'].replace(to_replace='Monday', value=0)\n",
+    "df_nd_n['weekday'] = df_nd_n['weekday'].replace(to_replace='Tuesday', value=1)\n",
+    "df_nd_n['weekday'] = df_nd_n['weekday'].replace(to_replace='Wednesday', value=2)\n",
+    "df_nd_n['weekday'] = df_nd_n['weekday'].replace(to_replace='Thursday', value=3)\n",
+    "df_nd_n['weekday'] = df_nd_n['weekday'].replace(to_replace='Friday', value=4)\n",
+    "df_nd_n['weekday'] = df_nd_n['weekday'].replace(to_replace='Saturday', value=5)\n",
+    "df_nd_n['weekday'] = df_nd_n['weekday'].replace(to_replace='Sunday', value=6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_night = df_nd_n[\"laeq\"]\n",
+    "X_night = df_nd_n.drop(\"laeq\", axis=\"columns\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([51.938446, 52.11555 , 52.11555 , ..., 51.395412, 51.440113,\n",
+       "       51.440113], dtype=float32)"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "predictions = gbrt_pipeline.predict(X_night)\n",
+    "predictions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.2288501587426275"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "MAE = sum(((predictions-y_night)**2)**(1/2))/len(y_night)\n",
+    "MAE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.1293852565058216"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "RMSE = (sum((predictions-y_night)**2)/len(y_night))**(1/2)\n",
+    "RMSE"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
