--- a/MDA_main_notebook.ipynb
+++ b/MDA_main_notebook.ipynb
@@ -882,7 +882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -890,25 +890,30 @@
      "output_type": "stream",
      "text": [
       "Results of Grid Search for model: XGBRegressor\n",
-      "Best Parameters: {'learning_rate': 0.05, 'max_depth': 5, 'n_estimators': 100}\n",
-      "Best Score: 14.660874714669172\n",
-      "Root Mean Squared Error: 3.781 +/- 0.603\n",
+      "Best Parameters: {'learning_rate': 0.05, 'max_depth': 4, 'n_estimators': 90}\n",
+      "Best Score: -0.48640694734931494\n",
       "Results of Grid Search for model: HistGradientBoostingRegressor\n",
-      "Best Parameters: {'learning_rate': 0.05, 'max_leaf_nodes': 9}\n",
-      "Best Score: 12.923050255238792\n",
-      "Root Mean Squared Error: 3.781 +/- 0.603\n"
+      "Best Parameters: {'learning_rate': 0.04, 'max_leaf_nodes': 9}\n",
+      "Best Score: -0.524156519482488\n",
+      "Results of Grid Search for model: Pipeline\n",
+      "Best Parameters: {'ridge__alpha': 3162.2776601683795}\n",
+      "Best Score: -0.1465648742448748\n",
+      "Evaluation results for best model (Pipeline):\n",
+      "Mean Absolute Error:     -3.627 +/- 0.424\n",
+      "Root Mean Squared Error: -4.766 +/- 0.487\n"
      ]
     }
    ],
    "source": [
     "from sklearn.model_selection import GridSearchCV, cross_validate\n",
-    "from sklearn.metrics import mean_squared_error\n",
+    "from sklearn.metrics import mean_absolute_error, mean_squared_error\n",
     "from sklearn.model_selection import TimeSeriesSplit\n",
     "from xgboost import XGBRegressor\n",
     "from sklearn.experimental import enable_hist_gradient_boosting\n",
     "from sklearn.ensemble import HistGradientBoostingRegressor\n",
     "from sklearn.linear_model import Ridge\n",
-    "import numpy as np\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "import copy\n",
     "\n",
     "def evaluate_models(X, y, cv, models):\n",
     "    best_model = None\n",
@@ -918,9 +923,9 @@
     "        if isinstance(model, XGBRegressor):\n",
     "            # Parameter grid for XGBoost model\n",
     "            param_grid = {\n",
-    "                'learning_rate': [0.05, 0.06],\n",
-    "                'n_estimators': [100, 110],\n",
-    "                'max_depth': [5, 6]\n",
+    "                'learning_rate': [0.04, 0.05],\n",
+    "                'n_estimators': [90, 100],\n",
+    "                'max_depth': [4, 5]\n",
     "            }\n",
     "        elif isinstance(model, HistGradientBoostingRegressor):\n",
     "            # Parameter grid for HistGradientBoostingRegressor model\n",
@@ -939,11 +944,8 @@
     "            print(f\"Using default hyperparameters for model: {type(model).__name__}\")\n",
     "            continue\n",
     "\n",
-    "        # Define custom scorer using mean squared error\n",
-    "        scorer = 'neg_mean_squared_error'\n",
-    "\n",
     "        # Perform grid search with time series cross-validation\n",
-    "        grid_search = GridSearchCV(model, param_grid=param_grid, cv=cv, scoring=scorer)\n",
+    "        grid_search = GridSearchCV(model, param_grid=param_grid, cv=cv, scoring='neg_mean_squared_error')\n",
     "        grid_search.fit(X, y)\n",
     "\n",
     "        # Get the best parameters and score from the search\n",
@@ -951,30 +953,52 @@
     "        score = -grid_search.best_score_\n",
     "        print(f\"Results of Grid Search for model: {type(model).__name__}\")\n",
     "        print(f\"Best Parameters: {best_params}\")\n",
+    "        print(f\"Best Score: {score}\")\n",
     "\n",
-    "        if score > best_score:\n",
-    "            best_model = model.set_params(**best_params)\n",
-    "            best_score = score\n",
+    "        best_model = model.set_params(**best_params)\n",
     "\n",
-    "        # Evaluate each model using time series cross-validation\n",
+    "        # Evaluate the best model using time series cross-validation\n",
     "        cv_results = cross_validate(\n",
     "            best_model,\n",
     "            X,\n",
     "            y,\n",
     "            cv=cv,\n",
-    "            scoring=[\"neg_root_mean_squared_error\"],\n",
+    "            scoring=[\"neg_mean_squared_error\"],\n",
     "        )\n",
-    "        rmse = -cv_results[\"test_neg_root_mean_squared_error\"]\n",
-    "        print(f\"Root Mean Squared Error: {rmse.mean():.3f} +/- {rmse.std():.3f}\")\n",
-    "\n",
-    "    return best_model\n",
-    "\n",
+    "        mse = -cv_results[\"test_neg_mean_squared_error\"]\n",
+    "        print(f\"Evaluation results for best model ({type(best_model).__name__}):\")\n",
+    "        print(\n",
+    "            f\"Root Mean Squared Error: {mse.mean():.3f} +/- {mse.std():.3f}\"\n",
+    "        )\n",
     "\n",
     "# Define the models to evaluate\n",
     "models = [XGBRegressor(), HistGradientBoostingRegressor(), Pipeline([('ridge', Ridge())])]\n",
     "\n",
     "# Example usage with multiple models\n",
     "best_model = evaluate_models(X, y, ts_cv, models)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>#sk-container-id-3 {color: black;background-color: white;}#sk-container-id-3 pre{padding: 0;}#sk-container-id-3 div.sk-toggleable {background-color: white;}#sk-container-id-3 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-3 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-3 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-3 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-3 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-3 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-3 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-3 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-3 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-3 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-3 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-3 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-3 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-3 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-3 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-3 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-3 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-3 div.sk-item {position: relative;z-index: 1;}#sk-container-id-3 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-3 div.sk-item::before, #sk-container-id-3 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-3 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-3 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-3 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-3 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-3 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-3 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-3 div.sk-label-container {text-align: center;}#sk-container-id-3 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-3 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-3\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>Pipeline(steps=[(&#x27;ridge&#x27;, Ridge(alpha=3162.2776601683795))])</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item sk-dashed-wrapped\"><div class=\"sk-label-container\"><div class=\"sk-label sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-5\" type=\"checkbox\" ><label for=\"sk-estimator-id-5\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">Pipeline</label><div class=\"sk-toggleable__content\"><pre>Pipeline(steps=[(&#x27;ridge&#x27;, Ridge(alpha=3162.2776601683795))])</pre></div></div></div><div class=\"sk-serial\"><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-6\" type=\"checkbox\" ><label for=\"sk-estimator-id-6\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">Ridge</label><div class=\"sk-toggleable__content\"><pre>Ridge(alpha=3162.2776601683795)</pre></div></div></div></div></div></div></div>"
+      ],
+      "text/plain": [
+       "Pipeline(steps=[('ridge', Ridge(alpha=3162.2776601683795))])"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "best_model"
    ]
   },
   {
